--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -1,10 +1,8 @@
-@import './fonts';
-
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: Roboto;
+  font-family: 'Source Sans Pro', sans-serif;
   font-size: 1rem;
 }
 
